# franka_controllers

./: CMakeLists.txt  franka_controllers_plugin.xml  package.xml
cfg/: compliance_param.cfg  dual_arm_compliance_param.cfg  teleop_gripper_param.cfg  teleop_param.cfg
config/: dual_arm_default_joints.yaml  franka_controllers.yaml  franka_target_joint.yaml
frankx/: .gitignore  CMakeLists.txt
frankx/affx/: CMakeLists.txt
frankx/examples/: async_target.py  brakes.py  kinematics.py  waypoints.py
frankx/include/frankx/: frankx.hpp  gripper.hpp  kinematics.hpp  motion_generator.hpp  motion_impedance_generator.hpp  motion_joint_generator.hpp  motion_path_generator.hpp  motion_waypoint_generator.hpp  robot.hpp
frankx/include/movex/motion/: motion_impedance.hpp  motion_joint.hpp  motion_waypoint.hpp
frankx/include/movex/robot/: kinematics.hpp  measure.hpp  motion_data.hpp  reaction.hpp  robot_state.hpp
frankx/ruckig/examples/: position.cpp
frankx/src/frankx/: gripper.cpp  kinematics.cpp  python.cpp  robot.cpp
include/franka_controllers/: cartesian_impedance_controller.h  dual_arm_cartesian_impedance_controller.h  dual_arm_joint_position_controller.h  joint_impedance_controller.h  pseudo_inversion.h  rolling_panda_wbc.h  whole_body_controller.h
launch/: cartesian_impedance_controller.launch  dual_arm_cartesian_impedance_controller.launch  dual_arm_joint_position_controller.launch  dual_arm_ptp_trajectory_publisher.launch  dual_arm_target_point_trajector_generater.launch  dual_gripper.launch  joint_impedance_controller.launch  whole_body_controller.launch
scripts/: curi_dual_arm_keyboard_control.py  franka_move_action_client.py  interactive_marker.py
src/: cartesian_impedance_controller.cpp  dual_arm_cartesian_impedance_controller.cpp  dual_arm_joint_position_controller.cpp  execute_cartesian_trajectory_action_client.cpp  execute_dual_arm_joint_server.cpp  execute_dual_arm_pose_server.cpp  execute_dual_arm_pose_server_new.cpp  execute_dual_arm_pose_torso_joint_position_server.cpp  execute_dual_gripper_server.cpp  execute_multi_client_server.cpp  joint_impedance_controller.cpp  libfranka_test.cpp  pub_joint_ptp_trajectory.cpp  pub_target.cpp  pub_test.cpp  pub_trajectory_test.cpp  rolling_panda_wbc.cpp  use_whole_body_controller.cpp  whole_body_controller.cpp
srv/: ExecuteDualPose.srv  createTrajectory.srv  movetoHome.srv  switchController.srv
